<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="?colorSurface"
    android:clickable="true"
    android:elevation="@dimen/keyline_4"
    android:focusable="true"
    android:orientation="vertical"
    android:id="@+id/root"
    app:behavior_hideable="false"
    app:behavior_peekHeight="@dimen/filter_peek"
    app:layout_behavior="com.google.android.material.bottomsheet.BottomSheetBehavior">

    <LinearLayout
        android:id="@+id/header"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="@dimen/keyline_4"
        android:gravity="center_vertical"
        android:alpha="0.2"
        android:background="?filterHeaderColor">

        <TextView
            style="?textAppearanceHeadline5"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/title_filter" />

        <ImageView
            android:id="@+id/icon"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:contentDescription="@null"
            android:src="@drawable/ic_arrow_up" />

    </LinearLayout>

    <View
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:background="?dividerColor"/>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:padding="@dimen/keyline_4"
        android:orientation="vertical">

        <TextView
            style="?textAppearanceSubtitle2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/title_order_by" />

        <com.google.android.material.chip.ChipGroup
            android:id="@+id/order"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:singleSelection="true"
            app:selectionRequired="true">

            <com.google.android.material.chip.Chip
                android:id="@+id/desc"
                style="@style/Widget.MaterialComponents.Chip.Choice"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:checked="true"
                android:text="@string/action_descending"/>

            <com.google.android.material.chip.Chip
                android:id="@+id/asc"
                style="@style/Widget.MaterialComponents.Chip.Choice"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/action_ascending"/>

        </com.google.android.material.chip.ChipGroup>

        <TextView
            style="?textAppearanceSubtitle2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/keyline_4"
            android:text="@string/title_created_date" />

        <com.google.android.material.chip.ChipGroup
            android:id="@+id/cratedDate"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:singleSelection="true"
            app:selectionRequired="true">

            <com.google.android.material.chip.Chip
                android:id="@+id/today"
                style="@style/Widget.MaterialComponents.Chip.Choice"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:checked="true"
                android:text="@string/action_today"/>

            <com.google.android.material.chip.Chip
                android:id="@+id/lastWeek"
                style="@style/Widget.MaterialComponents.Chip.Choice"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/action_last_week"/>

            <com.google.android.material.chip.Chip
                android:id="@+id/lastMonth"
                style="@style/Widget.MaterialComponents.Chip.Choice"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/action_last_month"/>

        </com.google.android.material.chip.ChipGroup>


    </LinearLayout>

</LinearLayout>