<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/root"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <com.google.android.material.appbar.MaterialToolbar
        android:id="@+id/toolbar"
        android:layout_width="match_parent"
        android:layout_height="?attr/actionBarSize"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:menu="@menu/menu_repo_detail" />

    <androidx.core.widget.NestedScrollView
        android:id="@+id/nestedScrollView"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1"
        android:background="?android:colorBackground"
        android:clipToPadding="false"
        android:fillViewport="true"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/toolbar">

        <com.google.android.material.card.MaterialCardView
            android:id="@+id/email_card_view"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:transitionName="@string/transition_repo_detail">

            <androidx.constraintlayout.widget.ConstraintLayout
                android:id="@+id/menu_item_constraint_layout"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:paddingHorizontal="@dimen/keyline_4"
                android:paddingVertical="@dimen/keyline_4">

                <TextView
                    android:id="@+id/name"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_marginEnd="@dimen/keyline_2"
                    android:textAppearance="?attr/textAppearanceHeadline3"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent"
                    tools:text="@string/sample_short" />

                <TextView
                    android:id="@+id/created"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="@dimen/keyline_2"
                    android:layout_marginEnd="@dimen/keyline_2"
                    android:textAppearance="?attr/textAppearanceBody2"
                    app:layout_constraintEnd_toStartOf="@+id/avatar"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/name"
                    tools:text="@string/sample_short" />

                <ImageView
                    android:id="@+id/avatar"
                    android:layout_width="@dimen/avatar_size"
                    android:layout_height="@dimen/avatar_size"
                    android:background="?selectableItemBackgroundBorderless"
                    android:contentDescription="@null"
                    android:scaleType="centerCrop"
                    android:src="@drawable/ic_user"
                    app:layout_constraintBottom_toBottomOf="@+id/created"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintTop_toTopOf="@id/created" />

                <TextView
                    android:id="@+id/body"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="@dimen/keyline_2"
                    android:textAppearance="?attr/textAppearanceBody1"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@id/avatar"
                    tools:text="@string/sample_medium" />

                <com.google.android.material.chip.Chip
                    android:id="@+id/stars"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="@dimen/keyline_2"
                    android:text="@string/mgs_d_stars"
                    app:chipIcon="@drawable/ic_stars"
                    app:chipBackgroundColor="?colorPrimary"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/body" />

                    <com.google.android.material.card.MaterialCardView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_margin="@dimen/keyline_0"
                        app:cardElevation="@dimen/keyline_2"
                        app:cardUseCompatPadding="true"
                        tools:visibility="visible"
                        app:layout_constraintEnd_toEndOf="parent"
                        app:layout_constraintStart_toStartOf="parent"
                        app:layout_constraintTop_toBottomOf="@id/stars">

                        <LinearLayout
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:orientation="vertical"
                            android:animateLayoutChanges="true">

                            <TextView
                                style="?textAppearanceHeadline6"
                                android:id="@+id/languagesLabel"
                                android:layout_width="match_parent"
                                android:layout_height="wrap_content"
                                android:background="?filterHeaderColor"
                                android:padding="@dimen/keyline_4"
                                android:text="@string/title_languages"/>

                            <androidx.recyclerview.widget.RecyclerView
                                android:id="@+id/languages"
                                android:layout_marginTop="@dimen/keyline_1"
                                android:layout_width="match_parent"
                                android:layout_height="wrap_content"
                                android:layout_margin="@dimen/keyline_4"
                                android:overScrollMode="never"
                                app:layoutManager="LinearLayoutManager"
                                tools:listitem="@layout/item_language"/>

                            <TextView
                                android:id="@+id/languagesInfo"
                                android:layout_width="match_parent"
                                android:layout_height="wrap_content"
                                android:padding="@dimen/keyline_4"
                                android:gravity="center"
                                android:text="@string/msg_no_languages_available" />

                            <com.google.android.material.progressindicator.LinearProgressIndicator
                                android:id="@+id/loading"
                                android:layout_width="match_parent"
                                android:layout_height="wrap_content"
                                android:indeterminate="true"
                                android:visibility="invisible" />

                        </LinearLayout>

                    </com.google.android.material.card.MaterialCardView>



            </androidx.constraintlayout.widget.ConstraintLayout>

        </com.google.android.material.card.MaterialCardView>

    </androidx.core.widget.NestedScrollView>

</androidx.constraintlayout.widget.ConstraintLayout>


